Fix broken CSS

--- a/homework/html/hw2/css/style.css
+++ b/homework/html/hw2/css/style.css
@@ -190,7 +190,7 @@ input[type="number"]::-webkit-inner-spin-button {
     padding-left: 3.5rem;
     padding-top: 1.5rem;
 }
-h6 {
+.remark {
     background-color: rgba(0, 0, 0, .7);
     font-weight: 400;
     color: #eee;
